force-app/main/default/objects/Account/fields/CB_Core_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>CB_Core_Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>CB Core Customer Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>