force-app/main/default/objects/Account/fields/CB_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>CB_Customer_Status__c</fullName>
    <description>Customer lifecycle status for CB onboarding</description>
    <label>CB Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Prospect</fullName><default>true</default><label>Prospect</label></value>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>Suspended</fullName><default>false</default><label>Suspended</label></value>
            <value><fullName>Deceased</fullName><default>false</default><label>Deceased</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>