force-app/main/default/objects/Account/fields/CB_IDV_Status__c.field-meta.xml
<CustomField>
    <fullName>CB_IDV_Status__c</fullName>
    <label>CB IDV Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Pass</fullName><default>false</default><label>Pass</label></value>
            <value><fullName>Refer</fullName><default>false</default><label>Refer</label></value>
            <value><fullName>Fail</fullName><default>false</default><label>Fail</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>