force-app/main/default/objects/Account/fields/CB_Is_Partner__c.field-meta.xml
<CustomField>
    <fullName>CB_Is_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CB Is Partner</label>
    <type>Checkbox</type>
</CustomField>