force-app/main/default/objects/Account/fields/CB_KYC_Status__c.field-meta.xml
<CustomField>
    <fullName>CB_KYC_Status__c</fullName>
    <label>CB KYC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
            <value><fullName>Referred</fullName><default>false</default><label>Referred</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>