force-app/main/default/objects/Account/fields/CB_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>CB_Risk_Rating__c</fullName>
    <label>CB Risk Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>